@@ -1,9 +1,9 @@
 package com.github.nl4.accessroles;
 
+import com.github.nl4.accessroles.data.Gender;
 import com.github.nl4.accessroles.domain.AccessRole;
 import com.github.nl4.accessroles.domain.Location;
 import com.github.nl4.accessroles.domain.Person;
-import com.github.nl4.accessroles.data.Gender;
 import com.github.nl4.accessroles.repo.AccessRoleRepository;
 import com.github.nl4.accessroles.repo.LocationRepository;
 import com.github.nl4.accessroles.repo.PersonRepository;
@@ -14,7 +14,7 @@ import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 
 @Component
 public class DatabaseDataLoader implements ApplicationListener<ContextRefreshedEvent> {
@@ -32,51 +32,51 @@ public class DatabaseDataLoader implements ApplicationListener<ContextRefreshedE
 
     @Override
     public void onApplicationEvent(ContextRefreshedEvent contextRefreshedEvent) {
-        Person rick = Person.builder()
+        var rick = Person.builder()
                 .firstName("Rick")
                 .lastName("Sanchez")
                 .gender(Gender.MALE)
                 .birthday(LocalDate.now().minusYears(70))
                 .build();
-        Person morty = Person.builder()
+        var morty = Person.builder()
                 .firstName("Morty")
                 .lastName("Smith")
                 .gender(Gender.MALE)
                 .birthday(LocalDate.now().minusYears(14))
                 .build();
-        Person summer = Person.builder()
+        var summer = Person.builder()
                 .firstName("Summer")
                 .lastName("Smith")
                 .gender(Gender.FEMALE)
                 .birthday(LocalDate.now().minusYears(17))
                 .build();
-        Person beth = Person.builder()
+        var beth = Person.builder()
                 .firstName("Beth")
                 .lastName("Smith")
                 .gender(Gender.FEMALE)
                 .birthday(LocalDate.now().minusYears(34))
                 .build();
-        Person jerry = Person.builder()
+        var jerry = Person.builder()
                 .firstName("Jerry")
                 .lastName("Smith")
                 .gender(Gender.MALE)
                 .birthday(LocalDate.now().minusYears(34))
                 .build();
-        personRepository.saveAll(Arrays.asList(rick, morty, summer, jerry, beth));
+        personRepository.saveAll(List.of(rick, morty, summer, jerry, beth));
 
-        Location gazor = Location.builder()
+        var gazor = Location.builder()
                 .name("Gazorpazorp")
                 .build();
-        Location cronen = Location.builder()
+        var cronen = Location.builder()
                 .name("Cronenberg World")
                 .build();
-        Location earth = Location.builder()
+        var earth = Location.builder()
                 .name("Earth")
                 .build();
-        Location pluto = Location.builder()
+        var pluto = Location.builder()
                 .name("Pluto")
                 .build();
-        locationRepository.saveAll(Arrays.asList(gazor, cronen, earth, pluto));
+        locationRepository.saveAll(List.of(gazor, cronen, earth, pluto));
 
         accessRoleRepository.save(AccessRole.builder().person(rick).location(earth).start(LocalDateTime.now()).end(LocalDateTime.now().plusYears(30)).build());
         accessRoleRepository.save(AccessRole.builder().person(rick).location(gazor).start(LocalDateTime.now()).end(LocalDateTime.now().plusYears(10)).build());
